css/stylesheet.css
/*
	css for all basic everywhere tags
*/

body {
	background-color: #232322;
	color: #66d6ff;
	padding-bottom: 80px;
}

a {
	border-radius: 50%;
}

/* 
	css for navigation
*/

.homelink {
	float: left;
	color: black;
	text-decoration: none;
}

.homelink:hover {
	color: black;
	text-decoration: underline;
}

/*
	css for game pages
*/

#video {
	display: block;
	margin: 0 auto;
	margin-top: 20px;
}

#gamelink {
	color: black;
	text-decoration: none;
	font-weight: bold;
}

#gamelink:hover {
	color: black;
	text-decoration: underline;
	font-weight: bold;
}

.gameparagraph {
	text-align: center;
	padding-bottom: 20px;
}

/*
	css for index page
*/

.circleimg {
	border-radius: 50%;
	border: 3px solid white;
	width: 256px; 
	height: 256px;
}

#circlerow {
	/* incase i need this */
}

#circlealignment {
	text-align: center;
}

#indextitle {
	font-size: 50px;
}

#indexsubtitle {
	font-size: 25px;
}

#titlediv {
	text-align: center;
	margin: 50px;
}

/*
	css for about me page
*/

#aboutmemaindiv {
	border: 5px solid black;
	background-color: #66d6ff;
	color: black;
	font-size: 18pt;
	padding: 50px;
}


#aboutmebody {
	padding-top: 50px;
}

.circleimgaboutme {
	float: left;
	border-radius: 50%;
	border: 3px solid white;
	width: 256px; 
	height: 256px;
	margin-right: 20px;
}

/*
	css for lost box page
*/

.lostbox-nav {
	color: black;
	text-decoration: none;
}

.lostbox-nav:hover {
	color: black;
	text-decoration: underline;
}

#lostboxmaindiv {
	border: 5px solid black;
	background-color: #66d6ff;
	color: black;
	font-size: 18pt;
	padding: 50px;
}


#subpagebody {
	padding-top: 50px;
	text-align: center;
}

